# mellanni-tools

./: .gitignore  README.md  __init__.py  data.py  login.py  login_firebase.py  login_google.py  main.py  populate_env.py  pyproject.toml  query_examples.py  requirements.txt  supabase_setup.sql
agents/: adk_expert_agent.py  agent.py  bigquery_agent.py  bigquery_tools.py  code_executor_agent.py  error_checker_agent.py  gogle_search_agent.py  image_viewer.py  plotting_tool.py  review_violation_checker.py
agents/creatives_agents/: __init__.py  media.py  prompts.py  smm_creator.py  sub_agents.py  tools.py
data/: instructions.txt  otps.py
ml_models/: return_comments_classification.pkl
modules/: a2a_client.py  crypto.py  datadive_client.py  embed_modules.py  event_sheets.py  events.py  filter_modules.py  formatting.py  gcloud_modules.py  gspread_recorder.py  image_modules.py  keepa_modules.py  pricing_ui.py  read_file.py  research_analyzer.py  restock_dashboard.py  sales_charts.py  sc_modules.py  sp_api_modules.py  spapi_inventory.py  sqp_analytics.py  sqp_charts.py  sqp_dashboard.py  sqp_modules.py  supabase_client.py  telegram_notifier.py
pages/: 02_Sales_Estimator.py  03_Keyword Processor.py  03_Keyword_Analyzer.py  04_Returns_-_Reviews_classifier.py  05_Promo Stats.py  06_Tools.py  07_Inventory.py  09_Price_history.py  11_Listing_content_optimizer.py  12_Competitor_analysis.py  13_SKU_changelog.py  14_AI_Photoshop.py  14_Bedroom_decor.py  15_Knowledge_base.py  15_Sales_trends.py  16_Images.py  16_Sales_hourly.py  17_Images.py  17_SQP_dashboard.py  18_SQP_dashboard.py  18_Sales_trends2.py  18_Shopify.py  20_User_Management.py  21_Restock.py
scripts/: migrate_otps_to_supabase.py
tests/: test_a2a_client.py  test_restock_dashboard.py  test_sales_charts.py  test_sc_modules_pricing.py  test_spapi_inventory.py
