[project]
name = "mellanni-tools"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.3",
    "beautifulsoup4>=4.13.5",
    "db-dtypes>=1.4.3",
    "fpdf>=1.7.2",
    "fuzzywuzzy>=0.18.0",
    "gdown>=5.2.0",
    "google-adk>=1.12.0",
    "google-api-python-client>=2.179.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud-aiplatform>=1.111.0",
    "google-cloud-bigquery>=3.36.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-secret-manager>=2.24.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.31.0",
    "gspread>=6.2.1",
    "imagekitio>=4.1.0",
    "keepa>=1.3.15",
    "levenshtein>=0.27.1",
    "litellm>=1.76.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.5",
    "matplotlib-inline>=0.1.7",
    "numpy>=2.3.2",
    "oauth2client>=4.1.3",
    "oauthlib>=3.3.1",
    "openai>=1.102.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-gbq>=0.29.2",
    "pillow>=11.3.0",
    "plotly>=6.3.0",
    "pyarrow>=21.0.0",
    "pyotp>=2.9.0",
    "python-amazon-sp-api>=1.9.47",
    "python-barcode>=0.16.1",
    "python-dotenv>=1.1.1",
    "python-levenshtein>=0.27.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "streamlit>=1.49.0",
    "streamlit-echarts>=0.4.0",
    "streamlit-oauth>=0.1.11",
    "urllib3>=1.26.20",
    "xlsxwriter>=3.2.5",
]
