[project]
name = "mellanni-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amazon-sp",
    "authlib>=1.6.9",
    "beautifulsoup4>=4.14.3",
    "db-dtypes>=1.4.4",
    "fpdf>=1.7.2",
    "fuzzywuzzy>=0.18.0",
    "gdown>=5.2.1",
    "google-adk>=1.26.0",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "google-cloud-aiplatform>=1.141.0",
    "google-cloud-bigquery>=3.40.1",
    "google-cloud-bigquery-storage>=2.36.2",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.9.0",
    "google-genai>=1.66.0",
    "gspread>=6.2.1",
    "helper-modules",
    "imagekitio<5",
    "keepa>=1.3.8",
    "levenshtein>=0.27.3",
    "litellm>=1.82.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.3",
    "oauth2client>=4.1.3",
    "oauthlib>=3.3.1",
    "openai>=2.26.0",
    "openpyxl>=3.1.5",
    "pandas",
    "pandas-gbq>=0.34.0",
    "pillow>=12.1.1",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyotp>=2.9.0",
    "python-amazon-sp-api>=2.1.8",
    "python-barcode>=0.16.1",
    "python-dotenv>=1.2.2",
    "python-levenshtein>=0.27.3",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "scheduled-reports",
    "streamlit<1.53.0",
    "streamlit-echarts==0.4.0",
    "streamlit-image-comparison>=0.0.4",
    "streamlit-oauth>=0.0.4",
    "urllib3>=2.6.3",
    "xlsxwriter>=3.2.9",
]

[tool.uv.sources]
helper-modules = { git = "https://github.com/misunders2d/helper-modules.git", rev = "master" }
amazon-sp = { git = "https://github.com/misunders2d/amazon_sp.git", rev = "master" }
scheduled-reports = { git = "https://github.com/misunders2d/scheduled_reports.git", rev = "master" }

[tool.uv]
override-dependencies = [
    "pandas<3.0.0"
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
